--- a/src/themes/sphinx-bootstrap/static/sphinx-bootstrap.css
+++ b/src/themes/sphinx-bootstrap/static/sphinx-bootstrap.css
@@ -231,3 +231,9 @@ input[type="submit"].active, input[type="submit"]:active {
   font-weight: 200;
   line-height: 30px;
 }
+
+.step-nav {
+    padding: 10px 0;
+    margin: 0 10px 18px;
+    font-size: 130%;
+}
