--- a/src/themes/sphinx-bootstrap/static/sphinx-bootstrap.css
+++ b/src/themes/sphinx-bootstrap/static/sphinx-bootstrap.css
@@ -239,3 +239,12 @@ input[type="submit"].active, input[type="submit"]:active {
     margin: 0 10px 18px;
     font-size: 130%;
 }
+
+#bootstrap-image-preview {
+    position:absolute;
+    display:none;
+    background: #fff;
+    box-shadow: 0px 0px 100px #000;
+    border-radius: 10px;
+    padding: 2em;
+}
