--- a/src/themes/sphinx-bootstrap/static/sphinx-bootstrap.css
+++ b/src/themes/sphinx-bootstrap/static/sphinx-bootstrap.css
@@ -238,6 +238,13 @@ input[type="submit"].active, input[type="submit"]:active {
     padding: 10px 0;
     margin: 0 10px 18px;
     font-size: 130%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px #ccc;
+}
+
+.step-nav p {
+    padding: 0.5em;
 }
 
 #bootstrap-image-preview {
@@ -247,4 +254,18 @@ input[type="submit"].active, input[type="submit"]:active {
     box-shadow: 0px 0px 100px #000;
     border-radius: 10px;
     padding: 2em;
+}
+
+.contents {
+    background-color: #eee;
+    padding: 1em;
+    border: 1px solid #ccc;
+    margin: 2em 0;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px #ccc;
+}
+
+.contents .topic-title {
+    font-size: 120%;
+    font-weight: bold;
 }
