fix css and image of daviz doc refs #27860

--- a/_static/daviz-tutorials.css
+++ b/_static/daviz-tutorials.css
@@ -18,6 +18,7 @@
     height:40px;
     float:left;
     border:2px solid rgb(26,26,26);
+    margin-right: 10px;
 }
 
 .daviz-tutorials .daviz-tutorials-videos .daviz-tutorials-videoitem{
